# tf-scale

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/tfscale-agent/: Cargo.toml
crates/tfscale-agent/src/: dns.rs  main.rs  resolver.rs  service.rs
crates/tfscale-control/: Cargo.toml
crates/tfscale-control/migrations/: 0001_initial.sql  0002_endpoint_metadata.sql  0003_dns_records.sql  0004_endpoint_lookup_index.sql
crates/tfscale-control/src/: main.rs
crates/tfscale-core/: Cargo.toml
crates/tfscale-core/src/: error.rs  ids.rs  lib.rs  protocol.rs
crates/tfscale-custom/: Cargo.toml
crates/tfscale-custom/src/: crypto.rs  frame.rs  lib.rs  nonce.rs  packet.rs  transport.rs  tun.rs
crates/tfscale-custom/src/platform/: linux.rs  macos.rs  mod.rs
crates/tfscale-net/: Cargo.toml
crates/tfscale-net/src/: lib.rs
crates/tfscale-relay/: Cargo.toml
crates/tfscale-relay/src/: main.rs
crates/tfscalectl/: Cargo.toml
crates/tfscalectl/src/: main.rs
docs/: TECHNICAL_PLAN.md
docs/architecture/: ADR.md  DATA_MODEL.md  NETWORK_FLOWS.md  RUST_STACK.md
docs/development/: AGENT_SERVICE_VALIDATION.md  E2E_VALIDATION.md  LINUX_TUN_VALIDATION.md  MACOS_TUN_VALIDATION.md  MAGICDNS_AGENT_DIAGNOSTICS_PLAN.md  MAGICDNS_LOCAL_PROXY_VALIDATION.md  P2P_REMOTE_LINUX_TEST.md  ROADMAP.md  TAILSCALE_LIKE_EXPERIENCE_PLAN.md  V0_1_PHASE_2_BACKEND_STATE_PLAN.md  V0_1_PHASE_4_TUN_PLAN.md  V0_1_PHASE_5_PACKET_CRYPTO_PLAN.md  V0_1_PHASE_6_UDP_TRANSPORT_PLAN.md  V0_1_PHASE_7_E2E_VALIDATION_PLAN.md  V0_1_PHASE_8_MACOS_TUN_PLAN.md  V0_1_RELEASE_CHECKLIST.md  V0_1_REMAINING_PLAN.md  V0_1_TASK_BREAKDOWN.md  V0_2_CONNECTIVITY_RELAY_BREAKDOWN.md  V0_2_CONNECTIVITY_RELAY_PLAN.md  V0_2_CONNECTIVITY_RELAY_VALIDATION.md  V0_3_HOSTNAMES_MAGICDNS_PLAN.md  V0_3_PHASE_3_LOCAL_DNS_PROXY_DESIGN.md  V0_3_PHASE_4_SYSTEM_RESOLVER_DESIGN.md
docs/product/: MVP.md  V0_1_DETAILED_DESIGN.md
scripts/: connectivity-relay-check.sh  e2e-control-cli-smoke.sh  linux-phase6-udp-tun-check.sh  linux-tun-check.sh  magicdns-local-check.sh
web/test-console/: README.md  app.js  index.html  styles.css
