[workspace]
members = [
  "crates/tfscale-agent",
  "crates/tfscale-control",
  "crates/tfscale-core",
  "crates/tfscale-net",
  "crates/tfscale-custom",
  "crates/tfscale-relay",
  "crates/tfscalectl",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/touchfish1/tf-scale"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
clap = { version = "4.5.40", features = ["derive", "env"] }
hex = "0.4.3"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde", "v7"] }
