[package]
name = "tfscale-control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tfscaled"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
hex.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
tfscale-core = { path = "../tfscale-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
