[package]
name = "tfscale-custom"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
getrandom = "0.3.4"
hkdf = "0.12.4"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tfscale-net = { path = "../tfscale-net" }
uuid.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
tun-rs = "2.8.5"

[dev-dependencies]
tfscale-core = { path = "../tfscale-core" }
tokio.workspace = true
