[package]
name = "tfscale-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tfscale-relay"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tfscale-core = { path = "../tfscale-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
